--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 build/
 build_*/
-compile_commands.json
+.cache/
 
 ### Emacs gitignore ###
 *~
@@ -48,7 +48,6 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
