Make multiple examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ set(BITSLICE_SOURCES src/bitslice.cc)
 add_library(bitslice SHARED ${BITSLICE_SOURCES})
 
 set(BITSLICE_TEST_SOURCES test/bitslice_test.cc)
-set(BITSLICE_EXAMPLE_SOURCES example/example.cc)
+file(GLOB BITSLICE_EXAMPLE_SOURCES example/*.cc)
+
 
 target_compile_options(
     bitslice PRIVATE
