--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,7 +1,7 @@
 function(make_example target)
     add_executable("example-${target}" ${target}.cc)
     set_target_properties("example-${target}" PROPERTIES OUTPUT_NAME "${target}")
-    target_link_libraries("example-${target}" PRIVATE bitslice)
+    target_link_libraries("example-${target}" PRIVATE bitsel)
     target_compile_options(
         "example-${target}" PRIVATE
         -g
